# end_to_end_encryption_rfc

./: .gitignore  README.md  RFC.md  RFC_v1.md  rfc.md
c14n/: C14n.java
reference-c++/: CMakeLists.txt  main.cpp
reference-java/: .gitignore  pom.xml
reference-java/src/main/java/org/nextcloud/e2ee/: NextcloudE2E.java
reference-java/src/test/java/org/nextcloud/e2ee/: Certificates.java  DecryptTestData.java  GenerateSignature.java  Scribble.java
reference-java/src/test/resources/: certificate.crt  keydata.json  metadata.json
reference-js/: index.js  package-lock.json  package.json
reference-js/test/: main.spec.js
reference-js/test/data/: certificate.crt  keydata.json  metadata.json
